Fix for multiple middle alignment

--- a/css/multiple.css
+++ b/css/multiple.css
@@ -1,7 +1,11 @@
 
 .multiple {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
     min-width: 300px;
     width: auto;
+    display: inline-block;
 }
 
 .multiple .multiple-value {
